@@ -5,7 +5,8 @@ Changelog
 1.7.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Introduce appearance helper
+  [Kevin Bieri]
 
 
 1.7.1 (2016-09-26)
